Catching up Kotlin SDK to other SDKs in terms of MLKEM768 support (via Noble Postquantum bridge); Adding self-test